@@ -6,8 +6,10 @@
         "start": "ng serve",
         "dev": "ng serve",
         "build": "ng build --prod --aot",
-        "upload": "aws s3 cp dist/wonder-scale-merchant s3://merchant-testing.wonderscale.com --recursive",
+        "upload": "aws s3 cp dist/wonder-scale-merchant s3://merchant.wonderscale.com --recursive",
         "deploy": "npm run build && npm run upload",
+        "upload-testing": "aws s3 cp dist/wonder-scale-merchant s3://merchant-testing.wonderscale.com --recursive",
+        "deploy-testing": "ng build --configuration qa --aot && npm run upload-testing",
         "test": "ng test",
         "lint": "ng lint",
         "postinstall": "ngcc",
